lean-ray-server/quickcheck/Test/DeriveArbitrary/DeriveSTLCTermTypeGenerators.lean
import Quickcheck.Arbitrary
import Quickcheck.DeriveArbitrary
import Quickcheck.Attr
import Quickcheck.Testable

open Quickcheck Gen

set_option guard_msgs.diff true

/-- Base types in the Simply-Typed Lambda Calculus (STLC)
    (either Nat or functions) -/
inductive type where
  | Nat : type
  | Fun : type ‚Üí type ‚Üí type
  deriving BEq, DecidableEq, Repr

/-- Terms in the STLC extended with naturals and addition -/
inductive term where
  | Const: Nat ‚Üí term
  | Add: term ‚Üí term ‚Üí term
  | Var: Nat ‚Üí term
  | App: term ‚Üí term ‚Üí term
  | Abs: type ‚Üí term ‚Üí term
  deriving BEq, Repr

-- Invoke deriving instance handler for the `Arbitrary` typeclass on `type` and `term`
set_option trace.quickcheck.deriving.arbitrary true in
/--
trace: [quickcheck.deriving.arbitrary] ‚Źé
    [mutual
       def arbitrarytype‚úĚ : Nat ‚Üí Quickcheck.Gen (@type‚úĚ) :=
         let rec aux_arb (fuel‚úĚ : Nat) : Quickcheck.Gen (@type‚úĚ) :=
           match fuel‚úĚ with
           | Nat.zero => Quickcheck.Gen.oneOfWithDefault (pure type.Nat) [(pure type.Nat)]
           | fuel'‚úĚ + 1 =>
             Quickcheck.Gen.frequency (pure type.Nat)
               [(1, (pure type.Nat)),
                 (fuel'‚úĚ + 1,
                   (do
                     let a‚úĚ ‚Üź aux_arb fuel'‚úĚ
                     let a‚úĚ¬Ļ ‚Üź aux_arb fuel'‚úĚ
                     return type.Fun a‚úĚ a‚úĚ¬Ļ))]
         fun fuel‚úĚ => aux_arb fuel‚úĚ
     end,
     instance : Quickcheck.ArbitraryFueled‚úĚ (@type‚úĚ) :=
       ‚ü®arbitrarytype‚úĚ‚ü©]
---
trace: [quickcheck.deriving.arbitrary] ‚Źé
    [mutual
       def arbitraryterm‚úĚ : Nat ‚Üí Quickcheck.Gen (@term‚úĚ) :=
         let rec aux_arb (fuel‚úĚ : Nat) : Quickcheck.Gen (@term‚úĚ) :=
           match fuel‚úĚ with
           | Nat.zero =>
             Quickcheck.Gen.oneOfWithDefault
               (do
                 let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                 return term.Const a‚úĚ)
               [(do
                   let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return term.Const a‚úĚ),
                 (do
                   let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                   return term.Var a‚úĚ¬Ļ)]
           | fuel'‚úĚ + 1 =>
             Quickcheck.Gen.frequency
               (do
                 let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                 return term.Const a‚úĚ)
               [(1,
                   (do
                     let a‚úĚ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return term.Const a‚úĚ)),
                 (1,
                   (do
                     let a‚úĚ¬Ļ ‚Üź Quickcheck.Arbitrary.arbitrary
                     return term.Var a‚úĚ¬Ļ)),
                 (fuel'‚úĚ + 1,
                   (do
                     let a‚úĚ¬≤ ‚Üź aux_arb fuel'‚úĚ
                     let a‚úĚ¬≥ ‚Üź aux_arb fuel'‚úĚ
                     return term.Add a‚úĚ¬≤ a‚úĚ¬≥)),
                 (fuel'‚úĚ + 1,
                   (do
                     let a‚úĚ‚Āī ‚Üź aux_arb fuel'‚úĚ
                     let a‚úĚ‚ĀĶ ‚Üź aux_arb fuel'‚úĚ
                     return term.App a‚úĚ‚Āī a‚úĚ‚ĀĶ)),
                 (fuel'‚úĚ + 1,
                   (do
                     let a‚úĚ‚Ā∂ ‚Üź Quickcheck.Arbitrary.arbitrary
                     let a‚úĚ‚Ā∑ ‚Üź aux_arb fuel'‚úĚ
                     return term.Abs a‚úĚ‚Ā∂ a‚úĚ‚Ā∑))]
         fun fuel‚úĚ => aux_arb fuel‚úĚ
     end,
     instance : Quickcheck.ArbitraryFueled‚úĚ (@term‚úĚ) :=
       ‚ü®arbitraryterm‚úĚ‚ü©]
-/
#guard_msgs in
deriving instance Arbitrary for type, term

-- Test that we can successfully synthesize instances of `Arbitrary` & `ArbitraryFueled`
-- for both `type` & `term`

/-- info: instArbitraryFueledType -/
#guard_msgs in
#synth ArbitraryFueled type

/-- info: instArbitraryFueledTerm -/
#guard_msgs in
#synth ArbitraryFueled term

/-- info: instArbitraryOfArbitraryFueled -/
#guard_msgs in
#synth Arbitrary type

/-- info: instArbitraryOfArbitraryFueled -/
#guard_msgs in
#synth Arbitrary term


/-!
Test that we can use the derived generator to find counterexamples.

We construct two faulty properties:
1. `‚ąÄ (term : term), isValue term = true`
2. `‚ąÄ (ty : type), isFunctionType ty = true`

Both of these properties are false, since there exist terms in the STLC
which are not values (e.g. function applications), and there are
types which are not function types (e.g. `Nat`).

We then test that the respective derived generators for `term`s and `type`s
generate counterexamples which refute the aforementioned properties.
-/

/-- Determines whether a `term` is a value.
    (Note that only constant `Nat`s and lambda abstractions are considered values in the STLC.) -/
def isValue (tm : term) : Bool :=
  match tm with
  | .Const _ | .Abs _ _ => true
  | _ => false

/-- Determines whether a `type` is a function type -/
def isFunctionType (ty : type) : Bool :=
  match ty with
  | .Nat => false
  | .Fun _ _ => true

/-- `Shrinkable` instance for `type` -/
instance : Shrinkable type where
  shrink (ty : type) :=
    match ty with
    | .Nat => []
    | .Fun t1 t2 => [.Nat, t1, t2]

/-- `Shrinkable` instance for `term` -/
instance : Shrinkable term where
  shrink := shrinkTerm
    where
      shrinkTerm (tm : term) : List term :=
        match tm with
        | .Const _ | .Var _ => []
        | .App e1 e2 | .Add e1 e2 => shrinkTerm e1 ++ shrinkTerm e2
        | .Abs _ e => shrinkTerm e

/-- `SampleableExt` instance for `type` -/
instance : SampleableExt type :=
  SampleableExt.mkSelfContained Arbitrary.arbitrary

/-- `SampleableExt` instance for `term` -/
instance : SampleableExt term :=
   SampleableExt.mkSelfContained Arbitrary.arbitrary

/-- error: Found a counter-example! -/
#guard_msgs in
#eval Testable.check (‚ąÄ (term : term), isValue term)
  (cfg := {numInst := 10, maxSize := 5, quiet := true})

/-- error: Found a counter-example! -/
#guard_msgs in
#eval Testable.check (‚ąÄ (ty : type), isFunctionType ty)
  (cfg := {numInst := 10, maxSize := 5, quiet := true})
